# qq-bot

./: docker-compose.yml
go-cqhttp/: config.yml
nonebot/: Dockerfile  bot.py  pyproject.toml  requirements.txt
nonebot/nonebot_plugin_nextcloud_stub/: __init__.py
nonebot/plugins/: daily_task.py  group_notify.py  hello.py  keyword_reply.py  weather.py
